deps/v8/test/message/fail/weak-refs-register1.out
*%(basename)s:*: TypeError: FinalizationRegistry.prototype.register: invalid target
fg.register(1);
   ^
TypeError: FinalizationRegistry.prototype.register: invalid target
    at FinalizationRegistry.register (<anonymous>)
    at *%(basename)s:*:4
